# python-imports

./: .gitignore  Makefile  README.md  pyproject.toml  python_imports.ipynb
brain_games/: __init__.py
demo/01-why/: why_imports.txt
demo/02-imports-from-files/: lib.py  main.py
demo/03-cycles/: another_lib.py  lib.py  lib_fixed.py  main.py  main_fixed.py
demo/04-main/: lib.py  main.py  name_guard.py
demo/05-packages/: main.py
demo/05-packages/foo/bar/: __init__.py  buz.py
demo/06-syspath/: main.py
demo/07-conflicts/: brain_games.py
demo/08-deps/: requirements.txt  why-deps.txt
demo/09-package-demo/: setup.py
demo/09-package-demo/my_lib/: __init__.py
demo/10-deps-conflicts/: deps-conflicts.txt
